@@ -45,6 +45,6 @@
 	</div>
 	<!-- Loading mask -->
 	<div id="tx_externalimport_loglist_loader">
-		<core:icon identifier="provider-fontawesome-spinner" size="default" />
+		<core:icon identifier="tx_external_import-loader" size="default" />
 	</div>
 </html>
